não ta encontando o $F{produtos}

--- a/back-end/src/main/resources/reportsFile/mainReport.jrxml
+++ b/back-end/src/main/resources/reportsFile/mainReport.jrxml
@@ -9,7 +9,7 @@
 	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="NO_DATA_ADAPTER"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Sample DB"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<style name="Title" forecolor="#FFFFFF" fontName="Times New Roman" fontSize="50.0" bold="false"/>
 	<style name="SubTitle" forecolor="#CCCCCC" fontName="Times New Roman" fontSize="18.0" bold="false"/>
@@ -43,6 +43,16 @@
 	<dataset name="icmsDataSet" uuid="73d7f496-4a27-4e29-a27f-15cf9590128a">
 		<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Sample DB"/>
 		<query language="sql"><![CDATA[]]></query>
+		<field name="nomeEmpresa" class="java.lang.String"/>
+		<field name="numeroNota" class="java.lang.String"/>
+		<field name="nomeFornecedor" class="java.lang.String"/>
+		<field name="emitente" class="java.lang.String"/>
+		<field name="destinatario" class="java.lang.String"/>
+		<field name="produtos" class="java.lang.String"/>
+	</dataset>
+	<dataset name="produtosDataSet" uuid="6a1d6f8f-92ca-418f-803d-dd71e1b95309">
+		<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Sample DB"/>
+		<query language="sql"><![CDATA[]]></query>
 		<field name="descricaoProduto" class="java.lang.String"/>
 		<field name="ncmCest" class="java.lang.String"/>
 		<field name="valorProduto" class="java.math.BigDecimal"/>
@@ -55,19 +65,46 @@
 		<field name="resultadoIcmsSubstituicaoTributaria" class="java.math.BigDecimal"/>
 	</dataset>
 	<parameter name="icmsDataSet" class="net.sf.jasperreports.engine.data.JRBeanCollectionDataSource"/>
-	<parameter name="nomeEmpresa" class="java.lang.String"/>
-	<parameter name="numeroNota" class="java.lang.String"/>
-	<parameter name="nomeFornecedor" class="java.lang.String"/>
-	<parameter name="emitente" class="java.lang.String"/>
-	<parameter name="destinatario" class="java.lang.String"/>
 	<query language="SQL"><![CDATA[]]></query>
+	<pageHeader height="50">
+		<element kind="component" uuid="71949498-3785-4914-9216-3c58afbcba49" mode="Opaque" x="0" y="1" width="595" height="49" backcolor="#FFFFFF">
+			<component kind="list">
+				<datasetRun uuid="5dda2fa2-7d8c-4cdf-946c-075952d31e79" subDataset="icmsDataSet">
+					<dataSourceExpression><![CDATA[$P{icmsDataSet}]]></dataSourceExpression>
+				</datasetRun>
+				<contents height="49" width="595">
+					<element kind="textField" uuid="ae6128bb-3a32-483b-85eb-97a59631cc83" x="10" y="0" width="100" height="20" fontSize="8.0" hTextAlign="Center" vTextAlign="Middle">
+						<expression><![CDATA[$F{nomeEmpresa}]]></expression>
+					</element>
+					<element kind="textField" uuid="0fde83e2-9733-4c8a-a8c9-20fd09481095" x="10" y="29" width="100" height="20" fontSize="8.0" hTextAlign="Center" vTextAlign="Middle">
+						<expression><![CDATA[$F{numeroNota}]]></expression>
+					</element>
+					<element kind="textField" uuid="d52d3677-78b8-452f-8b78-892a67df493b" x="180" y="29" width="100" height="20" fontSize="8.0" hTextAlign="Center" vTextAlign="Middle">
+						<expression><![CDATA[$F{nomeFornecedor}]]></expression>
+					</element>
+					<element kind="textField" uuid="b087a40a-452f-46a1-add3-e2d7987f64b3" x="480" y="0" width="100" height="20" fontSize="8.0" hTextAlign="Center" vTextAlign="Middle">
+						<expression><![CDATA[$F{emitente}]]></expression>
+					</element>
+					<element kind="textField" uuid="972ffe50-5323-4d96-aa99-138a6e2d242f" x="480" y="29" width="100" height="20" fontSize="8.0" hTextAlign="Center" vTextAlign="Middle">
+						<expression><![CDATA[$F{destinatario}]]></expression>
+					</element>
+				</contents>
+			</component>
+			<property name="com.jaspersoft.studio.unit.height" value="px"/>
+			<property name="com.jaspersoft.studio.unit.width" value="px"/>
+		</element>
+		<property name="com.jaspersoft.studio.unit.height" value="px"/>
+	</pageHeader>
 	<detail>
-		<band height="842">
-			<element kind="rectangle" uuid="9ce76e90-6e17-4933-b88c-e23fa92dd44b" x="0" y="0" width="595" height="780" backcolor="#005CAA"/>
-			<element kind="component" uuid="d21c3b64-c458-4a25-8982-888170b96c9b" stretchType="ContainerHeight" x="20" y="110" width="520" height="630">
+		<band height="792">
+			<element kind="rectangle" uuid="9ce76e90-6e17-4933-b88c-e23fa92dd44b" x="0" y="0" width="595" height="780" backcolor="#005CAA">
+				<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+			</element>
+			<element kind="component" uuid="d21c3b64-c458-4a25-8982-888170b96c9b" stretchType="ContainerHeight" x="30" y="10" width="520" height="60">
 				<component kind="table">
-					<datasetRun uuid="d2fbddd1-11e1-4b6a-8f3d-a2f70a461aab" subDataset="icmsDataSet">
-						<dataSourceExpression><![CDATA[$P{icmsDataSet}]]></dataSourceExpression>
+					<datasetRun uuid="c3f7580d-6139-4d2d-93d0-96abb0e7b8b8" subDataset="produtosDataSet">
+						<dataSourceExpression><![CDATA[net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{produtos})
+]]></dataSourceExpression>
 					</datasetRun>
 					<column kind="single" uuid="df42333b-bfe1-4d08-a51f-52bed23e3848" width="70">
 						<columnHeader height="30" rowSpan="1" style="Table_CH">
@@ -205,23 +242,7 @@
 				<property name="com.jaspersoft.studio.table.style.column_header" value="Table_CH"/>
 				<property name="com.jaspersoft.studio.table.style.detail" value="Table_TD"/>
 			</element>
-			<element kind="rectangle" uuid="65667d2c-5085-4e70-8c3d-cbcc5388b98c" x="0" y="0" width="595" height="70"/>
-			<element kind="textField" uuid="3f75936c-fd00-442e-a9a0-b3146dd6b980" x="19" y="50" width="120" height="11" fontName="SansSerif" fontSize="8.0">
-				<expression><![CDATA["N° Nota: " + $P{numeroNota}]]></expression>
-			</element>
-			<element kind="textField" uuid="1f3cabfe-924b-43a0-9d71-08595b5bb964" x="150" y="51" width="160" height="11" fontName="SansSerif" fontSize="8.0">
-				<expression><![CDATA["Fornecedor: " + $P{nomeFornecedor}]]></expression>
-			</element>
-			<element kind="textField" uuid="46c9205d-b244-4ba2-b09f-c9e1c2d2fa21" x="440" y="40" width="140" height="11" fontName="SansSerif" fontSize="8.0">
-				<expression><![CDATA["UF Destinatário" + $P{destinatario}]]></expression>
-			</element>
-			<element kind="textField" uuid="21faea78-264b-43ae-9cfa-6831120a56f0" x="440" y="15" width="140" height="11" fontName="SansSerif" fontSize="8.0">
-				<expression><![CDATA["UF Emitente: "+$P{emitente}]]></expression>
-			</element>
-			<element kind="textField" uuid="b9b875d2-bce2-4363-9e26-97d4d5a9321a" x="17" y="10" width="140" height="11" fontName="SansSerif" fontSize="8.0">
-				<expression><![CDATA["Empresa" + $P{nomeEmpresa}]]></expression>
-			</element>
-			<element kind="rectangle" uuid="5712d040-4613-4b72-92a9-eca5f63bde84" x="0" y="780" width="596" height="62"/>
+			<element kind="rectangle" uuid="5712d040-4613-4b72-92a9-eca5f63bde84" x="-1" y="750" width="596" height="42"/>
 		</band>
 		<band/>
 	</detail>
