feat: geração de relatórios funcional e integrada

--- a/front-end/src/app/pages/adm/estados-form/estados-form.component.html
+++ b/front-end/src/app/pages/adm/estados-form/estados-form.component.html
@@ -21,7 +21,7 @@
         
         <nz-col nzSpan="24">
             <nz-row nzJustify="end">
-                <button nz-button [nzSize]="'large'" nzType="primary" class="botao botaoAdicionar" (click)="submit()">Adicionar</button>
+                <button nz-button [nzSize]="'large'" nzType="primary" class="botao botaoAdicionar" (click)="submit()">Salvar</button>
             </nz-row>
         </nz-col>
     </nz-row>
