--- a/front-end/src/app/pages/icms/icms-detalhes-nota/icms-detalhes-nota.component.html
+++ b/front-end/src/app/pages/icms/icms-detalhes-nota/icms-detalhes-nota.component.html
@@ -90,7 +90,7 @@
                 <button nz-button nzSize="large">Cancelar</button>
             </nz-col>
             <nz-col>
-                <button nz-button nzSize="large" nzType="primary">Enviar</button>
+                <button nz-button nzSize="large" nzType="primary" (click)="gerarPDF()">Enviar</button>
             </nz-col>
         </nz-row>
     </nz-col>
