--- a/back-end/src/main/resources/reportsFile/mainReport.jrxml
+++ b/back-end/src/main/resources/reportsFile/mainReport.jrxml
@@ -76,7 +76,7 @@
 					<contents height="842" width="595">
 						<element kind="frame" uuid="bb8e408e-a5e7-4c70-889b-cff53846426c" mode="Opaque" x="0" y="0" width="595" height="110" backcolor="#005CAA">
 							<element kind="textField" uuid="3918cea0-469a-4c65-ad87-07fb99170c58" mode="Transparent" x="471" y="70" width="123" height="30" forecolor="#FFFFFF">
-								<expression><![CDATA["UF DEstinatario: " + $F{ufDestinatario}]]></expression>
+								<expression><![CDATA["UF Destinatário: " + $F{ufDestinatario}]]></expression>
 							</element>
 							<element kind="textField" uuid="5afe70c7-9c0a-40fa-9fa0-7ad388bab1c5" mode="Transparent" x="10" y="80" width="140" height="30" forecolor="#FFFFFF">
 								<expression><![CDATA["Numero: " + $F{numeroNota}]]></expression>
@@ -125,7 +125,7 @@
 								<column kind="single" uuid="e487bc35-9346-4c10-93ea-f2958287be38" width="50">
 									<columnHeader height="40" rowSpan="1" style="Table_CH">
 										<element kind="staticText" uuid="b0b2d2cf-2ee4-4fb3-8aa5-e101ade8be5b" stretchType="ContainerHeight" x="0" y="0" width="50" height="40" fontSize="8.0" hTextAlign="Center" vTextAlign="Middle">
-											<text><![CDATA[Valor Prod.]]></text>
+											<text><![CDATA[Valor do Produto]]></text>
 										</element>
 										<property name="com.jaspersoft.studio.unit.width" value="px"/>
 									</columnHeader>
@@ -139,7 +139,7 @@
 								<column kind="single" uuid="1beadde7-7505-4a30-8f47-bd57a744ea6c" width="45">
 									<columnHeader height="40" rowSpan="1" style="Table_CH">
 										<element kind="staticText" uuid="84592068-e8ac-46a9-92ee-586161704938" stretchType="ContainerHeight" x="0" y="0" width="45" height="40" fontSize="8.0" hTextAlign="Center" vTextAlign="Middle">
-											<text><![CDATA[Aliquota Interestadual]]></text>
+											<text><![CDATA[Aliquota entre estados]]></text>
 										</element>
 										<property name="com.jaspersoft.studio.unit.width" value="px"/>
 									</columnHeader>
@@ -153,7 +153,7 @@
 								<column kind="single" uuid="38b3575d-8420-4d4c-a049-38fd9811217a" width="45">
 									<columnHeader height="40" rowSpan="1" style="Table_CH">
 										<element kind="staticText" uuid="1a6e726a-cfdd-44ce-bb5d-6f340d6545cb" stretchType="ContainerHeight" x="0" y="0" width="45" height="40" fontSize="8.0" hTextAlign="Center" vTextAlign="Middle">
-											<text><![CDATA[aliquota Interna Emitente]]></text>
+											<text><![CDATA[Aliquota Interna do Emitente]]></text>
 										</element>
 										<property name="com.jaspersoft.studio.unit.width" value="px"/>
 									</columnHeader>
@@ -194,7 +194,7 @@
 								<column kind="single" uuid="c68b28c1-4e7e-4cde-a2d1-0517a3aaf158" width="60">
 									<columnHeader height="40" rowSpan="1" style="Table_CH">
 										<element kind="staticText" uuid="eccbcaf4-ecd1-4b6f-ae09-f61026c900f4" stretchType="ContainerHeight" x="0" y="0" width="60" height="40" fontSize="8.0" hTextAlign="Center" vTextAlign="Middle">
-											<text><![CDATA[Prod Com MVA]]></text>
+											<text><![CDATA[Produto Com MVA]]></text>
 										</element>
 									</columnHeader>
 									<detailCell height="50" style="Table_TD">
@@ -220,7 +220,7 @@
 								<column kind="single" uuid="a3684234-231e-4a2b-987b-d0c15a70883f" width="94">
 									<columnHeader height="40" rowSpan="1" style="Table_CH">
 										<element kind="staticText" uuid="ed7d0bb8-dd22-4bc3-9704-2e2056986eda" stretchType="ContainerHeight" x="0" y="0" width="94" height="40" fontSize="8.0" hTextAlign="Center" vTextAlign="Middle">
-											<text><![CDATA[Resultado ICMS]]></text>
+											<text><![CDATA[Resultado ICMS-ST]]></text>
 										</element>
 									</columnHeader>
 									<detailCell height="50" style="Table_TD">
