--- a/front-end/src/app/pages/inicio/inicio.component.scss
+++ b/front-end/src/app/pages/inicio/inicio.component.scss
@@ -20,13 +20,14 @@ img {
 
 .botaoAdicionar {
     background-color: green;
-    font-size: x-large;
     padding: 0;
     margin: 0;
 }
 
 .botaoGerenciar {
     background-color: #005CAA;
+    padding: 0;
+    margin: 0;
 }
 
 .botaoGerenciarTodos{
