--- a/front-end/src/app/pages/login/login.component.html
+++ b/front-end/src/app/pages/login/login.component.html
@@ -1,11 +1,25 @@
-<form (submit)="submit(form)" #form="ngForm">
-    <div class="grid">
-        <label for="nomeUsuario">Usuário</label>
-        <input type="text" name="nomeUsuario" id="nomeUsuario"
-               [(ngModel)]="usuario.nomeUsuario">
-        <label for="senha">Senha</label>
-        <input type="password" name="senha" id="senha"
-               [(ngModel)]="usuario.senha">
+<body>
+    <div class="images">
+        <img src="front-end\src\assets\images\ReviewMais 1.png" alt="logo">
+        <img src="front-end\src\assets\images\Mobile login-pana 1.png" alt="">
     </div>
-    <input type="submit" value="Login" [disabled]="form.invalid">
-</form>
+    <div class="container">
+        <form (submit)="submit(form)" #form="ngForm">
+            <div class="icons">
+                <img src="front-end/src/assets/svgs/google.svg" alt="Icone do google">
+                <img src="front-end/src/assets/svgs/meta.svg" alt="Icone da meta">
+                <img src="front-end/src/assets/svgs/apple.svg" alt="Icone da apple">
+            </div>
+            <hr>
+            <div class="formulario">
+                <label for="nomeUsuario">Usuário</label>
+                <input type="text" name="nomeUsuario" id="nomeUsuario" [(ngModel)]="usuario.nomeUsuario">
+                <label for="senha">Senha</label>
+                <input type="password" name="senha" id="senha" [(ngModel)]="usuario.senha">
+                <a href="#" class="esqueceu-senha">Esqueceu a senha?</a>
+            </div>
+            <input type="submit" value="Entrar" [disabled]="form.invalid" class="botao">
+            <a href="#" class="cadastre-se">Cadastre-se</a>
+        </form>
+    </div>
+</body>
