--- a/front-end/src/app/pages/icms/icms-home/icms-home.component.html
+++ b/front-end/src/app/pages/icms/icms-home/icms-home.component.html
@@ -46,7 +46,7 @@
         </td>
         <td [nzAlign]="'center'">
           <ng-container>
-            <button nz-button [nzSize]="'large'" class="botao botaoGerenciar" routerLink="/icms/grupo-notas"
+            <button nz-button [nzSize]="'large'" class="botao botaoGerenciar" routerLink="/icms/grupo-notas, data.id"
               routerLinkActive="active">Gerenciar</button>
           </ng-container>
         </td>
