--- a/front-end/src/app/pages/login/login.component.html
+++ b/front-end/src/app/pages/login/login.component.html
@@ -1,14 +1,14 @@
 <body>
     <div class="images">
-        <img src="front-end\src\assets\images\ReviewMais 1.png" alt="logo">
-        <img src="front-end\src\assets\images\Mobile login-pana 1.png" alt="">
+        <img src="../../../assets/images/ReviewMais 1.png" alt="logo" class="logo">
+        <img src="../../../assets/images/login.png" alt="Imagem login" class="login-img">
     </div>
     <div class="container">
         <form (submit)="submit(form)" #form="ngForm">
             <div class="icons">
-                <img src="front-end/src/assets/svgs/google.svg" alt="Icone do google">
-                <img src="front-end/src/assets/svgs/meta.svg" alt="Icone da meta">
-                <img src="front-end/src/assets/svgs/apple.svg" alt="Icone da apple">
+                <img src="../../../assets/svgs/google.svg" alt="Icone do google" class="icones">
+                <img src="../../../assets/svgs/meta.svg" alt="Icone da meta" class="icones">
+                <img src="../../../assets/svgs/apple.svg" alt="Icone da apple" class="icones">
             </div>
             <hr>
             <div class="formulario">
