--- a/front-end/src/app/pages/login/login.component.scss
+++ b/front-end/src/app/pages/login/login.component.scss
@@ -10,14 +10,29 @@ body {
     width: 70%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    background-color: #f5f5f5; 
+    background-color: #f5f5f5;
+}
+
+.logo {
+  width: 30em;
+  height: 20em;
+}
+
+.login-img {
+  width: 35em;
+  height: 50em;
+}
+
+img.icones {
+  background-color: #ccc;
+  border-radius: 2em;
+  padding: 1em;
 }
 
 .images img {
     max-width: 100%;
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
 }
 
 .container {
@@ -51,7 +66,7 @@ hr {
 }
 
 .formulario {
-    width: 30em; 
+    width: 30em;
     display: flex;
     flex-direction: column;
 }
